Fixed alignment and padding issues

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -98,4 +98,5 @@ form textarea {
 
 #form-button {
     padding: 5px 15px;
+    padding-top: 5px;
 }
